fixed data overflow issue and list card desgin

--- a/src/app/@features/deleted-notes/pages/deleted-note-page/deleted-note-page.component.css
+++ b/src/app/@features/deleted-notes/pages/deleted-note-page/deleted-note-page.component.css
@@ -20,17 +20,18 @@
     margin-bottom: 20px;
     padding: 20px;
   }
-  .example-card {
-    border: solid 1px #ccc;
-    color: rgba(255, 255, 255, 0.87);
+  .example-box {
+    width: 100%;
+    color: rgba(0, 0, 0, 0.87);
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    background: brown;
+    cursor: move;
     font-size: 14px;
     border-radius: 4px;
     word-break: break-word;
+  
   }
   
   .note-card {
@@ -40,4 +41,8 @@
     flex-direction: column;
     position: relative;
     padding: 0 5px;
+    margin-bottom: 5px ;
+    background-color: rgb(228, 228, 228);
+    overflow-y: auto;
+    overflow-x: hidden;
   }
