--- a/src/app/@features/note-list/pages/note-details-page/note-details-page.component.css
+++ b/src/app/@features/note-list/pages/note-details-page/note-details-page.component.css
@@ -4,12 +4,12 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    height: 100%;
     margin-bottom: 10px;
   }
   .note-input-container__box {
     display: flex;
     width: 600px;
+    height: 350px;
     flex-direction: column;
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
     border-radius: 0.375rem;
@@ -19,6 +19,12 @@
     background-color: rgb(240, 240, 240);
     color: black;
   }
+  .ckeditor{
+    color: black;
+    height: 100% ;
+    overflow: auto;
+  }
+
   .note-input-container__box__input {
     padding: 0.75rem;
     border: none;
