--- a/src/app/@features/note-list/pages/note-list-page/note-list-page.component.css
+++ b/src/app/@features/note-list/pages/note-list-page/note-list-page.component.css
@@ -37,10 +37,11 @@
 }
 .example-list {
   max-width: 100%;
+  min-height: 100%;
   display: flex;
   flex-direction: row;
   border-radius: 4px;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .example-box {
@@ -54,7 +55,6 @@
   font-size: 14px;
   border-radius: 4px;
   word-break: break-word;
-  border: 1px solid black;
 
 }
 
@@ -69,18 +69,18 @@
   margin-bottom: 5px ;
   background-color: rgb(228, 228, 228);
   overflow-y: auto;
+  overflow-x: hidden;
+}
+.note-card-content{
+  height: 80%;
+  overflow-y: auto;
 }
 .card-action {
-  opacity: 0;
   position: absolute;
-  top: 0;
   right: 0;
+  bottom: 0;
 }
-.note-card:hover .card-action {
-  z-index: 1;
-  opacity: 1;
-  transition: opacity 0.5s ease-in-out;
-}
+
 
 /* drag and drop */
 .cdk-drag-preview {
